--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ __pycache__/
 
 .vscode/
 *.code-workspace
+.vscode
 
 # C extensions
 *.so
@@ -104,6 +105,7 @@ ipython_config.py
 
 # PEP 582; used by e.g. github.com/David-OConnor/pyflow
 __pypackages__/
+__pycache__
 
 # Celery stuff
 celerybeat-schedule
